# sytefy

./: .codexrules  .gitignore  AGENTS.md  README.md  cookies.txt  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  cookies.txt  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2024070401_initial_user_table.py  2024070402_add_customers_table.py  2024070403_add_user_profiles_table.py  2024070404_add_appointments_table.py  2024070405_add_services_table.py  2024070406_add_notifications_table.py  2024070407_add_invoices_table.py  516a09494af5_rbac_support.py
backend/src/sytefy_backend/: __init__.py  worker.py
backend/src/sytefy_backend/app/: main.py
backend/src/sytefy_backend/config/: settings.py
backend/src/sytefy_backend/core/: exceptions.py  logging.py
backend/src/sytefy_backend/core/database/: session.py
backend/src/sytefy_backend/core/observability/: __init__.py  celery_metrics.py  metrics.py  middleware.py
backend/src/sytefy_backend/core/security/: __init__.py  csrf.py  headers.py  middleware.py  passwords.py  rate_limiter.py  sessions.py  tokens.py
backend/src/sytefy_backend/core/tasks/: __init__.py  celery_app.py
backend/src/sytefy_backend/modules/: __init__.py
backend/src/sytefy_backend/modules/appointments/: __init__.py  tasks.py
backend/src/sytefy_backend/modules/finances/: __init__.py
backend/tests/: conftest.py  test_admin.py  test_appointments.py  test_auth.py  test_finances.py  test_metrics.py  test_notifications.py  test_reminders.py  test_services.py  test_sessions.py
(+89 files in other folders)
