[tool.poetry]
name = "sytefy-backend"
version = "0.1.0"
description = "Secure, modular FastAPI backend for the Sytefy digital secretary platform"
authors = ["Sytefy Team <dev@sytefy.local>"]
packages = [{ include = "sytefy_backend", from = "src" }]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = { extras = ["standard"], version = "0.30.6" }
sqlalchemy = {version = "2.0.32"}
asyncpg = "0.29.0"
aiosqlite = "0.20.0"
psycopg = { version = "3.1.18", extras = ["binary"] }
pydantic = "2.8.2"
email-validator = "2.1.1"
pydantic-settings = "2.4.0"
alembic = "1.13.2"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = { version = "1.7.4", extras = ["bcrypt"] }
redis = "5.0.7"
structlog = "24.1.0"
httpx = "0.27.0"
prometheus-client = "0.20.0"
celery = "5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.24.0"
ruff = "0.5.7"
fakeredis = "2.23.0"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
